Fixed map popup position (z-index)

--- a/src/components/common/buttons/mobile-button.less
+++ b/src/components/common/buttons/mobile-button.less
@@ -17,6 +17,7 @@
     padding: (@row-height * 0.3) 0;
     border-left: none;
     border-right: none;
+    border-radius: 0;
     color: @main-blue;
     text-align: center;
     font-size: 1.2em;
