--- a/src/components/common/menu/header.less
+++ b/src/components/common/menu/header.less
@@ -9,7 +9,7 @@
   width: 100%;
   height: @header-height;
   background-color: @main-blue;
-  z-index: 10;
+  z-index: @header-z-index;
   position: fixed;
   top: 0;
   left: 0;
