--- a/src/components/common/menu/mobile-top-menu.less
+++ b/src/components/common/menu/mobile-top-menu.less
@@ -6,7 +6,7 @@
 .mobile-top-menu {
   &:extend(.menu);
 
-  z-index: 5;
+  z-index: @top-menu-z-index;
   left: 0;
   top: 0;
 
