--- a/src/components/common/menu/navigation-menu.less
+++ b/src/components/common/menu/navigation-menu.less
@@ -6,7 +6,7 @@
 .navigation-menu {
   &:extend(.menu);
 
-  z-index: 20;
+  z-index: @navigation-menu-z-index;
   left: 0;
   bottom: 0;
 
