--- a/src/components/constants.less
+++ b/src/components/constants.less
@@ -37,3 +37,9 @@
 @medium-viewport: 600px;
 @small-viewport: 400px;
 @min-width: 360px;
+
+@header-z-index: 15;
+@top-menu-z-index: 10;
+@navigation-menu-z-index: 20;
+@map-popup-z-index: 5;
+@dimmer-z-index: 3;
